--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     font-family: 'poppins', sans-serif;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: #080808;
     color: #fff;
@@ -69,7 +72,7 @@ nav ul li a:hover::after{
 }
 .austin-col img{
     width: 100%;
-    margin-top: -100px;
+    margin-top: -10px;
     border-radius: 10%;
 }
 .austin-col p{
@@ -85,23 +88,14 @@ nav ul li a:hover::after{
 
 /*--------------------------about------------------------*/
 #about{
-    width: 95%;
+    width: 100%;
     margin: auto;
     margin-top: 80px;
     padding-bottom: 50px;
     color: #ababab;
 }
-.about-col1{
-    flex-basis: 35%;
-}
-.about-col1 img{
-    width: 100%;
-    margin-top: 0;
-    border-radius: 10px;
-}
-.about-col2{
-    flex-basis: 60%;
-}
+
+
 .sub-title{
     font-size: 60px;
     font-weight: 600;
@@ -110,14 +104,16 @@ nav ul li a:hover::after{
 p{
     line-height: 1.5;
 }
-
+.click{
+    color: #ff004f;
+}
     
 .tab-titles{
     display: flex;
     margin: 20px 0 40px;
 }
 .tab-links{
-    margin-right: 50px;
+    margin-right: 80px;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
@@ -329,4 +325,61 @@ form .btn2{
     background: #262626;
     font-weight: 300;
     margin-top: 20px;
+}
+
+/*--------------------------css for small screens------------------------*/
+nav .fa-solid{
+    display: none;
+}
+@media screen and (max-width: 600px){
+   
+   .austin-col h1{
+    padding: 15px 0 25px;
+    font-size: 30px;
+}
+   .austin-col p{
+    padding-top: 0;
+    font-size: 16px;
+  }
+  .austin-col img{
+    width: 100%;
+    height: 50%;
+    margin-top: 10px;
+    border-radius: 10%;
+}
+nav .fa-solid{
+    display: block;
+    font-size: 25px;
+}
+nav ul{
+    background: #ff004f;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+}
+nav ul li{
+    display: block;
+    margin: 25px;
+}
+nav ul .fa-solid{
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+}
+.sub-title{
+    font-size: 40px;
+}
+.tab-links{
+    margin-right: 20px;
+    font-size: 16px;
+}
+.copyright{
+    font-size: 14px;
+}
 }
